--- a/.github/workflows/build_app.yaml
+++ b/.github/workflows/build_app.yaml
@@ -1,8 +1,9 @@
 name: Testing
+
 on:
-  pull_request:
-    branches:
-    - main
+  - push
+  - pull_request
+
 jobs:
   test:
     name: Testing iOS app
